# vcenter-operator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: workflow.yml
examples/: baremetal_configmap.yaml  list_baremetal_blocks.yaml  query_netbox.yaml  test.py
kos_operator/: cmd.py  configurator.py  crds.py  masterpassword.py  phelm.py  templates.py
tests/e2e/: list_create_delete_user_vcenter_sso.py  test_nsxt_user_management_api.py
tests/nsxt_user_api/: test_user_api.py  test_user_management.py
tests/phelm_sort_resources/: test_sort_resources.py
tests/service_user_injection/: test_nsxt_service_user_injection_deployment.py  test_nsxt_service_user_injection_secret.py  test_service_user_injection_deployment.py  test_service_user_injection_secret.py  test_service_user_template.py
tests/service_user_last_seen/: test_last_seen_updater.py
tests/service_user_vault/: test_check_and_update_username_if_neccessary.py  test_login.py  test_service_user.py  test_service_user_expired.py  test_service_user_version.py  test_vault.py  test_vault_cacher.py
tests/service_user_vcenter/: test_nsxt_service_user_management.py  test_service_user_vcenter.py  test_service_user_vcenter_deletion.py
vcenter_operator/: cmd.py  configurator.py  discovery.py  masterpassword.py  nsxt_ss.py  nsxt_user_manager.py  phelm.py  templates.py  util.py  vault.py  vault_cache.py  vcenter_sso.py
