[metadata]
name = kos_operator
summary = Poll openstack and configure k8s resources accordingly
description-file = README.rst
version = 0.1.0

author = Fabian Wiesel
author-email = fabian.wiese@sap.com
home-page = http://www.github.com/sapcc/vcenter-operator
classifier =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[global]
setup-hooks =
    pbr.hooks.setup_hook


[files]
packages = kos_operator


[entry_points]
console_scripts =
	kos-operator = kos_operator.cmd:main
	masterpassword = kos_operator.masterpassword:main


[egg_info]
tag_build = 1
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
