[metadata]
name = vcenter_operator
summary = setup vcenters
description-file = README.rst
version = 0.1.0

author = Fabian Wiesel
author-email = fabian.wiese@sap.com
home-page = http://www.github.com/sapcc/vcenter-operator
classifier =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8


[global]
setup-hooks =
    pbr.hooks.setup_hook


[files]
packages = vcenter_operator


[entry_points]
console_scripts =
	vcenter-operator = vcenter_operator.cmd:main
	masterpassword = vcenter_operator.masterpassword:main


[egg_info]
tag_build = 1
tag_date = 0
tag_svn_revision = 0


[wheel]
universal = 1


[flake8]
max-line-length = 120
exclude = .git,__pycache__,.eggs,*.egg-info,.tox,*lib/python*
ignore = E241,E741,W503,W504
